# mentiroso

./: ChangeLog.md  Makefile  README.md  hindent_all.pl  typesys.cabal
src/: typesys.hs
test/prop/: Spec.hs
test/unit/: Tests.hs
